Server serves client

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<title>Tiempo real</title>
 		<meta name="author" content="Luis Castro Martín">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
 	</head>
 
 	<body>
